# score

./: .gitignore  .gitlint  BUILD  CONTRIBUTION.md  LICENSE  MODULE.bazel  NOTICE  README.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_fix.md  improvement.md
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  improvement.md
.github/actions/gitlint/: action.yml
.github/workflows/: copyright.yml  docs.yml  format.yml  gitlint.yml
docs/: BUILD  conf.py  index.rst  requirements.txt  requirements_lock.txt
docs/_assets/css/: score.css  score_design.css  score_needs.css
docs/_extensions/: layouts.py  metamodel.py
docs/features/: index.rst
docs/features/analysis-infra/: index.rst
docs/features/communication/: index.rst
docs/features/frameworks/: index.rst
docs/features/infrastructure/: config_as_code.rst  index.rst
docs/features/integration/: index.rst
docs/features/persistency/: index.rst
docs/platform_management_plan/: change_management.rst  config_management.rst  documentation_management.rst  index.rst  problem_resolution.rst  project_management.rst  quality_management.rst  release_management.rst  requirements_management.rst  risk_management.rst  safety_management.rst  software_development.rst  software_verification.rst  stakeholder_management.rst  tool_management.rst
docs/process/: index.rst
docs/process/guidelines/: index.rst
docs/process/introduction/: index.rst
docs/process/roles/: index.rst  roles.rst
docs/process/templates/: index.rst
docs/process_description/: index.rst
docs/requirements/: index.rst
docs/requirements/stakeholder/: index.rst
docs/requirements/tool/: index.rst
docs/score_releases/: index.rst
docs/stakeholder_requirements/: index.rst
docs/tool_requirements/: index.rst
tools/cr_checker/: BUILD  cr_checker.bzl
tools/format/: BUILD
(+18 files in other folders)
